force-app/main/default/objects/Sharat_Sushma_Site_Visit_c__x/Sharat_Sushma_Site_Visit_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>My_another_DE_Org</externalDataSource>
    <externalName>Sharat_Sushma__Site_Visit__c</externalName>
    <label>Site Visit</label>
    <pluralLabel>Site Visits</pluralLabel>
</CustomObject>