force-app/main/default/objects/Sharat_Sushma_Site_Visit_c__x/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <externalDeveloperName>OwnerId</externalDeveloperName>
    <label>Owner ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>