force-app/main/default/objects/Sharat_Sushma_Site_Visit_c__x/fields/Sharat_Sushma_Apartment_3_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Apartment_3_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Apartment_3__c</externalDeveloperName>
    <label>Flat  3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>