force-app/main/default/objects/Sharat_Sushma_Site_Visit_c__x/fields/Sharat_Sushma_Date_of_Vist_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Date_of_Vist_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Date_of_Vist__c</externalDeveloperName>
    <label>Date of Vist</label>
    <type>Date</type>
</CustomField>