force-app/main/default/objects/Sharat_Sushma_Site_Visit_c__x/fields/Sharat_Sushma_Description_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Description_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Description__c</externalDeveloperName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>