force-app/main/default/objects/Sharat_Sushma_Site_Visit_c__x/fields/Sharat_Sushma_FeedBack2_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_FeedBack2_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__FeedBack2__c</externalDeveloperName>
    <label>FeedBack2</label>
    <type>TextArea</type>
</CustomField>