force-app/main/default/objects/Sharat_Sushma_Site_Visit_c__x/fields/Sharat_Sushma_FeedBack3_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_FeedBack3_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__FeedBack3__c</externalDeveloperName>
    <label>FeedBack3</label>
    <type>TextArea</type>
</CustomField>