force-app/main/default/objects/Sharat_Sushma_Site_Visit_c__x/fields/Sharat_Sushma_Feedback_Project_2_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Feedback_Project_2_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Feedback_Project_2__c</externalDeveloperName>
    <label>Feedback Project 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>