force-app/main/default/objects/Sharat_Sushma_Site_Visit_c__x/fields/Sharat_Sushma_Opportunities_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Opportunities_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Opportunities__c</externalDeveloperName>
    <label>Opportunities</label>
    <length>18</length>
    <type>Text</type>
</CustomField>