force-app/main/default/objects/Sharat_Sushma_Site_Visit_c__x/fields/Sharat_Sushma_Visit_Charges_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Visit_Charges_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Visit_Charges__c</externalDeveloperName>
    <label>Visit Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>