force-app/main/default/objects/Sharat_Sushma_Site_Visit_c__x/fields/Sharat_Sushma_Visit_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Visit_Status_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Visit_Status__c</externalDeveloperName>
    <label>Visit Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>